# tenten

./: Cargo.toml  README.md
examples/: read1.fa  read2.fa
src/: axis.rs  block.rs  color.rs  command.rs  dotplane.rs  eval.rs  file.rs  http.rs  layout.rs  lib.rs  main.rs  parser.rs  plotter.rs  seq.rs  sequence.rs  tick.rs  window.rs
src/dotplot/: axis.rs  color.rs  dotplane.rs  dotplot.rs  hit.rs  layout.rs  mod.rs  plane.rs  plot.rs  sequence.rs
