[package]
name = "tenten"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
env_logger = "0.11"
hex_color = "3"
indoc = "2"
iterm2img = "0.1"
log = "0.4"
plotters = "0.3"
plotters-backend = "0.3"
rand = "0.9"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tempfile = "3.19"
transpose = "0.2.3"
